--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,3 +115,28 @@ jobs:
           release_name: v${{ needs.properties.outputs.version }}
           body: ${{ needs.properties.outputs.changelog }}
           draft: true
+
+  snapshot:
+    name: Publish To OSSRH Snapshot Repository
+    if: (github.event_name != 'pull_request') && (github.ref == 'refs/heads/main')
+    needs: properties
+    runs-on: ubuntu-latest
+    steps:
+      - name: Fetch Sources
+        uses: actions/checkout@v2
+      - name: Setup Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Decrypt Key Ring File
+        env:
+          FILE_PASSPHRASE: ${{ secrets.FILE_PASSPHRASE }}
+        run: gpg --quiet --batch --yes --decrypt --passphrase="${FILE_PASSPHRASE}" --output secring.gpg secring.gpg.gpg
+      - name: Publish To OSSRH Snapshot Repository
+        env:
+          SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
+          SIGNING_PASS: ${{ secrets.SIGNING_PASS }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          VERSION: ${{ needs.properties.outputs.version }}-SNAPSHOT
+        run: ./gradlew publish -PlibVersion="${VERSION}" -Psigning.secretKeyRingFile=../../secring.gpg -Psigning.password="${SIGNING_PASS}" -Psigning.keyId="${SIGNING_KEY_ID}" --stacktrace
