Change version to 1.0.0-ALPHA1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 libGroupId=it.czerwinski.android.lifecycle
 libVersion=1.0.0
+libVersionSuffix=ALPHA1
 libDescription=Extensions for Jetpack Lifecycle
 libUrl=https://czerwinski.it/projects/android-lifecycle/
 gitUrl=https://github.com/sczerwinski/android-lifecycle
