--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 libGroupId=it.czerwinski.android.lifecycle
-libVersion=1.1.0
-libVersionSuffix=
+libVersion=1.2.0
+libVersionSuffix=SNAPSHOT
 libDescription=Extensions for Jetpack Lifecycle
 libUrl=https://czerwinski.it/projects/android-lifecycle/
 gitUrl=https://github.com/sczerwinski/android-lifecycle
