--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 libGroupId=it.czerwinski.android.lifecycle
 libVersion=1.5.0
-libVersionSuffix=SNAPSHOT
+libVersionSuffix=
 libDescription=Extensions for Jetpack Lifecycle
 libUrl=https://czerwinski.it/projects/android-lifecycle/
 gitUrl=https://github.com/sczerwinski/android-lifecycle
